--- a/evaluation-cfgan/pyproject.toml
+++ b/evaluation-cfgan/pyproject.toml
@@ -33,7 +33,7 @@ packages = [
 python = "~3.9"
 typed-argument-parser = "~1.7.1"
 tensorflow = "~2.6.0"
-recsys_framework = { path = "../recsys-framework/", develop = false }
+recsys_framework = { path = "../recsys-framework/", develop = true }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
@@ -41,6 +41,7 @@ black = "^21.7b0"
 pytest = "^6.2.4"
 memory-profiler = "^0.58.0"
 types-toml = "^0.10.0"
+pytest-mock = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
